--- a/frontEnd/front/src/app/settings/settings.component.html
+++ b/frontEnd/front/src/app/settings/settings.component.html
@@ -8,7 +8,7 @@
         <div class="card-body text-center">
           <img class="img-account-profile rounded-circle mb-2" src="assets/img/avatar.png" width="300" height="300" alt="">
           <div class="small font-italic text-muted mb-4">JPG or PNG no larger than 5 MB</div>
-          <p-button [label]="'uploadImg' | translate"></p-button>
+          <button class="p-button" translate>uploadImg</button>
         </div>
       </div>
     </div>
@@ -55,7 +55,7 @@
                 <input class="form-control" id="inputBirthday" type="text" name="birthday" [placeholder]="'inputBirthday' | translate" value="05/10/2001">
               </div>
             </div>
-            <p-button label="Save changes"></p-button>
+            <button class="p-button" translate>saveChanges</button>
           </form>
         </div>
       </div>
