--- a/frontEnd/front/src/app/header/header.component.html
+++ b/frontEnd/front/src/app/header/header.component.html
@@ -1,26 +1,37 @@
 <div class="container-fluid p-0">
-    <div class="banner">
-        <span translate>bannerIntro</span>
-        <span>
-            <select class="select-language" [(ngModel)]="selectLang" name="selectLang" (change)="setTransLanguage()">
-                <option *ngFor="let lang of transLang" value="{{lang}}" selected="selectLang">{{ lang }}</option>
-            </select>
-        </span>
+    <div class="banner row">
+      <div class="col-9 text-right fs-md-1 fs-sm-1" translate>bannerIntro</div>
+
+      <div class="col-1 text-right offset-2 pr-3">
+        <select class="select-language" [(ngModel)]="selectLang" name="selectLang" (change)="setTransLanguage()">
+          <option *ngFor="let lang of transLang" value="{{lang}}" selected="selectLang"><span src="../../assets/img/franceflag.png"></span>{{ lang }}</option>
+        </select>
+      </div>
     </div>
     <div class="navbar">
+      <div class="logo">
         <img src="../../assets/img/logo1.png">
-        <img src="../../assets/img/logo2.png">
-        <nav>
-            <ul>
-            <li ><a class="hover-underline-animation" routerLink="/home" routerLinkActive="active" translate>home</a></li>
-            <li *ngIf="this.authService.isLoggedIn" ><a class="hover-underline-animation" routerLink="/modeling" routerLinkActive="active" translate>data</a></li>
-            <li *ngIf="this.authService.isLoggedIn"><a class="hover-underline-animation" routerLink="/settings" routerLinkActive="active" translate>settings</a></li>
-            <li *ngIf="!this.authService.isLoggedIn"><a class="hover-underline-animation" routerLink="/login"  routerLinkActive="active" translate>login</a></li>
-            <li *ngIf="this.authService.isLoggedIn"><a class="hover-underline-animation" routerLink="/login"  routerLinkActive="active" translate (click)="logout()">logout</a></li>
-            </ul>
-        </nav>
+        <img src="../../assets/img/logo2.png" class="offset-1">
+      </div>
+
+
+      <!-- ======= Mobile nav toggle button ======= -->
+<!--      <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>-->
+
+      <nav class="menu-button">
+        <div class="burger" (click)="toggleMenu()">
+          <i class="material-icons">{{ isMenuOpen ? "close" : "menu" }}</i>
+        </div>
+        <ul class="menu" [class.is-open]="isMenuOpen">
+          <li><a class="hover-underline-animation menu-item" routerLink="/home" routerLinkActive="active" translate (click)="change()">home</a></li>
+          <li *ngIf="!this.authService.isLoggedIn"><a class="hover-underline-animation menu-item" routerLink="/login"  routerLinkActive="active" translate (click)="login()">login</a></li>
+          <li *ngIf="this.authService.isLoggedIn" ><a class="hover-underline-animation menu-item" routerLink="/modeling" routerLinkActive="active" translate>data</a></li>
+          <li *ngIf="this.authService.isLoggedIn"><a class="hover-underline-animation menu-item" routerLink="/settings" routerLinkActive="active" translate>settings</a></li>
+          <li *ngIf="this.authService.isLoggedIn"><a class="hover-underline-animation menu-item" routerLink="/login"  routerLinkActive="active" translate (click)="logout()">logout</a></li>
+        </ul>
+      </nav>
     </div>
-    <div class="title">
+    <div class="title" *ngIf="!this.authService.isLogging">
         <h1 class="display-1 title-text" [innerHTML]="title | translate"></h1>
         <!-- <h1 class="display-1 title-text" translate> {{'homeTitle' | translate}}</h1> -->
         <img src="../../assets/img/background.png" class="background">
