--- a/frontEnd/front/src/app/login/login.component.html
+++ b/frontEnd/front/src/app/login/login.component.html
@@ -1,18 +1,68 @@
-<div class="login-container">
-    <h2 class="login-title" translate>loginNoun</h2>
-    <form class="form-container">
-        <div class="form-group">
-            <span class="p-float-label">
-                <input pInputText id="username" name="username" [(ngModel)]="username" required />
-                <label htmlFor="username" translate>username</label>
-            </span>
+<!--<div class="login-container">-->
+<!--    <h2 class="login-title" translate>loginNoun</h2>-->
+<!--    <form class="form-container">-->
+<!--        <div class="form-group">-->
+<!--            <span class="p-float-label">-->
+<!--                <input pInputText id="username" name="username" [(ngModel)]="username" required />-->
+<!--                <label htmlFor="username" translate>username</label>-->
+<!--            </span>-->
+<!--        </div>-->
+<!--        <div class="form-group">-->
+<!--            <span class="p-float-label">-->
+<!--                <input pInputText id="password" name="password" [(ngModel)]="password" required />-->
+<!--                <label htmlFor="password" translate>password</label>-->
+<!--            </span>-->
+<!--        </div>-->
+<!--        <button type="submit" pButton class="p-button-primary" (click)="onSubmit()" translate>submit</button>-->
+<!--    </form>-->
+<!--</div>-->
+
+<div class="gradient-form" style="background-color: #eee;">
+  <div class="container py-5">
+    <div class="row d-flex justify-content-center align-items-center">
+      <div class="col-xl-10">
+        <div class="card rounded-3 text-black">
+          <div class="row g-0">
+            <div class="col-lg-6">
+              <div class="card-body p-md-5 mx-md-4">
+
+                <div class="text-center">
+                  <img src="../../assets/img/logo1.png"
+                       style="width: 185px;" alt="logo">
+                  <h4 class="mt-1 mb-5 pb-1">Welcome to CYDRE Project</h4>
+                </div>
+
+                <form>
+                  <div class="form-outline mb-4">
+
+                    <label class="form-label" for="form2Example11">Username</label>
+                    <input id="form2Example11" class="form-control"
+                           placeholder="Phone number or email address" />
+                  </div>
+
+                  <div class="form-outline mb-4">
+                    <label class="form-label" for="form2Example22">Password</label>
+
+                    <input type="password" id="form2Example22" class="form-control" />
+                  </div>
+
+                  <div class="text-center pt-1 mb-5 pb-1 ">
+                    <button class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3" type="button" (click)="onSubmit()">Log in</button>
+                  </div>
+                </form>
+
+              </div>
+            </div>
+            <div class="col-lg-6 d-flex align-items-center gradient-custom-2 d-none d-md-none d-lg-block align-items-center">
+              <div class="text-white px-3 py-4 p-md-5 mx-md-4 ">
+                <div class="col-12 text-center text-white ">
+                  <p>Log in to access your account</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="form-group">
-            <span class="p-float-label">
-                <input pInputText id="password" name="password" [(ngModel)]="password" required />
-                <label htmlFor="password" translate>password</label>
-            </span>
-        </div>
-        <button type="submit" pButton class="p-button-primary" (click)="onSubmit()" translate>submit</button>
-    </form>
+      </div>
+    </div>
+  </div>
 </div>
