modif settings page

--- a/frontEnd/front/src/app/login/login.component.html
+++ b/frontEnd/front/src/app/login/login.component.html
@@ -10,7 +10,7 @@
         <br>
         <div class="form-group">
             <span class="p-float-label">
-                <input pInputText id="password" name="password" [(ngModel)]="password" required />
+                <input pInputText id="password" name="password" type="password" [(ngModel)]="password" required />
                 <label htmlFor="password" translate>password</label>
             </span>
         </div>
