--- a/frontEnd/front/src/app/footer/footer.component.html
+++ b/frontEnd/front/src/app/footer/footer.component.html
@@ -1,8 +1,7 @@
 <!-- Footer -->
 <footer class="text-center text-lg-start bg-body-tertiary text-muted">
   <!-- Section: Social media -->
-  <div style="background: #35B8BEFF; padding: 0" class="row justify-content-center justify-content-lg-between p-4 border-bottom">
-    <!-- Left -->
+  <div class="banner row justify-content-center justify-content-lg-between p-2 border-bottom" style="margin-right: 0;">
     <div class="col-7 text-left me-5 text-white" >
       <span>Get connected with us on social networks:</span>
     </div>
@@ -20,6 +19,10 @@
         <i class="bi bi-github"></i>
       </a>
     </div>
+  </div>
+  <div style="background: #35B8BEFF; padding: 0" class="row ">
+    <!-- Left -->
+
     <!-- Right -->
   </div>
   <!-- Section: Social media -->
@@ -104,4 +107,3 @@
   <!-- Copyright -->
 </footer>
 <!-- Footer -->
-
