--- a/frontEnd/front/src/app/header/header.component.scss
+++ b/frontEnd/front/src/app/header/header.component.scss
@@ -22,52 +22,30 @@
     color: $font-black;
   }
 
-  .hover-underline-animation::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    transform: scaleX(0);
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: $font-green;
-    transform-origin: bottom right;
-    transition: transform 0.25s ease-out;
-  }
-
-  .hover-underline-animation:hover::after {
-    transform: scaleX(1);
-    transform-origin: bottom left;
-  }
-
-  nav {
-    display: flex;
-    justify-content:center;
-    padding: 1rem 1rem;
-    float: right;
-    margin-right: 5%;
-
-  }
-
-  nav ul {
-    display: flex;
-    list-style: none;
-
-  }
-
-  nav li {
-    padding-left: 5rem;
-    float: right;
-  }
-
-.navbar{
+.hover-underline-animation::after {
+  content: '';
+  position: absolute;
   width: 100%;
-  height: 20%;
-  position: sticky;
-  top: 0;
-  z-index: 100;
-  background-color: white;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: $font-green;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
 }
+
+.hover-underline-animation:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+li a{
+  margin-right: 50px;
+}
+
+
+
 a{
   text-decoration: none;
   color: $font-black;
