--- a/frontEnd/front/src/app/login/login.component.html
+++ b/frontEnd/front/src/app/login/login.component.html
@@ -57,7 +57,7 @@
             </div>
             <div class="col-lg-6 gradient-custom-2 d-flex align-items-center">
               <div class="col-12 text-center text-white mx-auto">
-                <p class="h1">Log in to access your account</p>
+                <p class="h1" [innerHTML]="'loginTitle' | translate"></p>
               </div>
             </div>
           </div>
