--- a/frontEnd/front/src/app/footer/footer.component.html
+++ b/frontEnd/front/src/app/footer/footer.component.html
@@ -3,7 +3,7 @@
   <!-- Section: Social media -->
   <div class="banner row justify-content-center justify-content-lg-between p-2 border-bottom" style="margin-right: 0;">
     <div class="col-7 text-left me-5 text-white" >
-      <span>Get connected with us on social networks:</span>
+      <span translate>connectToSocial</span>
     </div>
     <!-- Left -->
 
@@ -36,61 +36,44 @@
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
           <!-- Content -->
           <h6 class="text-uppercase fw-bold mb-4">
-            <i class="fas fa-gem me-3"></i>Company name
+            <i class="fas fa-building me-3"></i> CYDRE
           </h6>
-          <p>
-            Here you can use rows and columns to organize your footer content. Lorem ipsum
-            dolor sit amet, consectetur adipisicing elit.
+          <p translate>
+            companyDescription
           </p>
         </div>
         <!-- Grid column -->
 
         <!-- Grid column -->
-        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4 offset-md-3 offset-lg-2 offset-xl-2">
           <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">
-            Products
+            Software
           </h6>
           <p>
-            <a href="#!" class="text-reset">Angular</a>
+            <a class="text-reset">Angular</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">React</a>
+            <a class="text-reset">Python</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Vue</a>
+            <a class="text-reset">Material</a>
           </p>
         </div>
         <!-- Grid column -->
 
-        <!-- Grid column -->
-        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-          <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4">
-            Useful links
-          </h6>
-          <p>
-            <a href="#!" class="text-reset">Pricing</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Settings</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Orders</a>
-          </p>
-        </div>
-        <!-- Grid column -->
+
 
         <!-- Grid column -->
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
           <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-          <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+          <p><i class="fas fa-home me-3"></i> INSA, 2024, France</p>
           <p>
             <i class="fas fa-envelope me-3"></i>
-            info@example.com
+            info@insa-rennes.fr
           </p>
-          <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
+          <p><i class="fas fa-phone me-3"></i> + 01 23 45 67</p>
         </div>
         <!-- Grid column -->
       </div>
