--- a/frontEnd/front/src/app/modeling/historique/historique.component.html
+++ b/frontEnd/front/src/app/modeling/historique/historique.component.html
@@ -6,27 +6,38 @@
         The actual rendered columns are set as a property on the row definition" -->
 
   <!-- Position Column -->
-  <ng-container matColumnDef="position">
-    <th mat-header-cell *matHeaderCellDef> No. </th>
-    <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+  <ng-container matColumnDef="Index">
+    <th mat-header-cell *matHeaderCellDef> Index </th>
+    <td mat-cell *matCellDef="let element"> {{element.Index}} </td>
   </ng-container>
 
   <!-- Name Column -->
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> Name </th>
-    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+  <ng-container matColumnDef="J0014010">
+    <th mat-header-cell *matHeaderCellDef> J0014010 </th>
+    <td mat-cell *matCellDef="let element"> {{element.J0014010}} </td>
   </ng-container>
 
   <!-- Weight Column -->
-  <ng-container matColumnDef="weight">
-    <th mat-header-cell *matHeaderCellDef> Weight </th>
-    <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+  <ng-container matColumnDef="J0121510">
+    <th mat-header-cell *matHeaderCellDef> J0121510 </th>
+    <td mat-cell *matCellDef="let element"> {{element.J0121510}} </td>
   </ng-container>
 
   <!-- Symbol Column -->
-  <ng-container matColumnDef="symbol">
-    <th mat-header-cell *matHeaderCellDef> Symbol </th>
-    <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+  <ng-container matColumnDef="J0144010">
+    <th mat-header-cell *matHeaderCellDef> J0144010 </th>
+    <td mat-cell *matCellDef="let element"> {{element.J0144010}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="J0323010">
+    <th mat-header-cell *matHeaderCellDef> J0323010 </th>
+    <td mat-cell *matCellDef="let element"> {{element.J0323010}} </td>
+  </ng-container>
+
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="J0611610">
+    <th mat-header-cell *matHeaderCellDef> J0611610 </th>
+    <td mat-cell *matCellDef="let element"> {{element.J0611610}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
