--- a/frontEnd/front/src/app/modeling/modelisation/modelisation.component.html
+++ b/frontEnd/front/src/app/modeling/modelisation/modelisation.component.html
@@ -21,13 +21,12 @@
         <!-- use a disabled button to provide padding for tree leaf -->
         <button mat-icon-button disabled></button>
         {{node.name}}
-        <div *ngIf="node.type">
+        <div *ngIf="getTypeForName(TREE_DATA[0], node.name)" class="d-flex">
           <div class="form-group mx-sm-3 mb-2">
-            <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
+            <input class="form-control" placeholder="val">
           </div>
-          <button type="submit" class="btn btn-primary mb-2">Confirm identity</button>
         </div>
-        <div *ngIf="!node.type">
+        <div *ngIf="!getTypeForName(TREE_DATA[0], node.name)">
           <mat-slider class="mx-sm-5 mb-1" min="0" max="100000" step="1000" discrete [displayWith]="formatLabel">
             <input matSliderThumb>
           </mat-slider>
@@ -43,7 +42,7 @@
             {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
           </mat-icon>
         </button>
-        {{node.name}}
+        {{node.name}} {{node.type}}
       </mat-tree-node>
     </mat-tree>
 
