--- a/frontEnd/front/src/app/header/header.component.html
+++ b/frontEnd/front/src/app/header/header.component.html
@@ -22,7 +22,7 @@
   <nav class="navbar sticky-top navbar-expand-lg" style="background: #FBFBFBFF">
     <div class="container-fluid">
       <div class="navbar-brand col-6">
-        <img src="../../assets/img/logo1.png">
+        <a href="/home"><img src="../../assets/img/logo1.png"></a>
         <img src="../../assets/img/logo2.png" class="offset-1">
       </div>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapseNavbar" aria-controls="collapseNavbar" aria-expanded="false" aria-label="Toggle navigation">
